# hugorm

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE  README.md  flamegraph.html
examples/: annoying.hug  first-class-fun.hug  helloworld.hu  helloworld.hug  hot-funs.hug  input.hug  interface.hug  loops.hug  test-use.hug  while.hug
src/: lib.rs  main.rs
src/hugorm/: error.rs  mod.rs
src/hugorm/ir/: compiler.rs  mod.rs
src/hugorm/lexer/: lexer.rs  matcher.rs
src/hugorm/parser/: ast.rs  mod.rs  parser.rs
src/hugorm/prelude/: math.rs  mod.rs
src/hugorm/visitor/: symtab.rs  visitor.rs
src/hugorm/vm/: compiler.rs  mod.rs  object.rs  vm.rs
