[package]
name = "hugorm"
version = "0.1.0"
authors = ["nilq <i.am.niels.nielsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
rustyline = "*"
broom = "*"
nanbox = "*"
internment = "*"
cli-table = "0.3"