[package]
name = "hugorm"
version = "0.1.0"
authors = ["nilq <i.am.niels.nielsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9.3"
rustyline = "6.1.2"
zub = "0.2.20"
gag = "0.1.10"
rustyline-derive = "0.3.1"